# Kamil

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  eval.md
.cache/clangd/index/: App.cpp.3773743B765D4C85.idx  App.h.083DB091C0355CEE.idx  CmdBox.h.00797FED8C3A6703.idx  CmdBox.h.7C0B6FC957803D88.idx  Cursor.cpp.63DDBA2592F262B5.idx  Cursor.h.9A1C5E81E9495E49.idx  Document.cpp.098001E78022A64C.idx  Document.cpp.8023F3F204E6F658.idx  Document.h.5A180A1E1AAB7D07.idx  Document.h.E76375CB03744678.idx  Editor.cpp.79B62324456C4BBD.idx  Editor.cpp.C37F66B82DEA5776.idx  Editor.h.1D46F2200F805D9F.idx  Editor.h.90113C3E4871539E.idx  EditorCam.cpp.FDF2D3F4AC8FAB60.idx  EditorCam.h.D1C8EE7DF9A89B9A.idx  EditorWindow.cpp.C5277A747BD7A64C.idx  EditorWindow.h.C5E7C183FE78F39F.idx  Keyboard.cpp.2D879FFB7BC821A8.idx  Keyboard.cpp.798802AC080818DE.idx  Keyboard.h.0CC73C310292397D.idx  Keyboard.h.70566B47646275E6.idx  MyRect.cpp.18AEC904C7E542FE.idx  MyRect.cpp.D1AA5F5CBC50F516.idx  MyRect.h.2BAA7313E2EFD7E3.idx  MyRect.h.4F3B2BA8F4DF1617.idx  Stack.cpp.26A50F4D335CD66B.idx  Stack.h.70DC3235F2935D61.idx  TextBox.cpp.06803E6D0039D635.idx  TextBox.cpp.24375E488F01F98C.idx  TextBox.h.21EA380C9C46B982.idx  TextBox.h.46CE4AF4967F9CB1.idx  TomlC.cpp.116219C05C06BBBA.idx  TomlC.h.0EA13C8D7C071B72.idx  Window.cpp.AEC86AFDDA205369.idx  array.h.022FB3F0295565EA.idx  array.h.1584E1211AAFD927.idx  array.inl.B0EA66AF0FF47CBD.idx  array.inl.F037284C7099D345.idx  at_path.h.6E30EDAAE1DCB33C.idx  (+96 more)
Info/: NEA_CompSci.md
include/Kamil/: App.h  CmdBox.h  Commands.h  Document.h  Editor.h  EditorCam.h  EditorWindow.h  Keyboard.h  MyRect.h  TextBox.h  TomlC.h  kamil.h
include/Kamil/Utils/: Stack.h
resource/Pics/: CmdBox.eps  chrono_example.eps  docInit1.eps  docgAbsPath.eps  dochChange.eps  editorRegex.eps  fmtlibSpeed.eps  keyHandleCmdKeyEvent.eps  reg.eps  regexTest.eps  testWhiteBox.eps  textConstructor.eps  textDraw.eps  textGetString.eps  textGetTextBox.eps  textGetTextCol.eps  textSetFont.eps  textSetFont2.eps  textSetString.eps  textSetTextCol.eps  timTakenNS.eps  timeTakenMS.eps
resource/Pics/.eps/Document/: docConst1.eps  docConst2.eps  docCreateFile.eps  docInit2.eps  docSaveFile1.eps  docSaveFile2.eps  docSetBuffInfo.eps  docsetChange.eps
resource/Pics/.eps/Editor/: editorConstructor.eps  editorUseConfig.eps
resource/Pics/.eps/Keyboard/: keyCmdEntered.eps  keyConstructor.eps  keyGTextEntered.eps  keyHandleKeyEvent.eps  keyIsTextEntered.eps  keyTextEntered.eps
resource/Pics/.eps/TextBox/: textConstructor.eps  textGetString.eps  textGetTextSize.eps  textIsMouseHover.eps  textSetFont.eps  textSetFont2.eps  textSetTextCol.eps
resource/Pics/eps/: baseVimLook.eps
resource/Pics/eps/Document/: findConfig.eps  getrPath.eps
resource/Pics/eps/Editor/: editorDestructor.eps
resource/Pics/eps/TextBox/: textDraw.eps  textSetString.eps
src/: App.cpp  Document.cpp  Editor.cpp  EditorCam.cpp  EditorWindow.cpp  Keyboard.cpp  MyRect.cpp  Notes.md  TextBox.cpp  TomlC.cpp  kamil.cpp
src/.test/: CMakeLists.txt  main.cpp  stream  test.cpp
src/.test/tester/: Doxyfile  hey.py
src/.test/tester/html/: annotated.html  classes.html  classhey_1_1App-members.html  classhey_1_1App.html  classhey_1_1Base-members.html  classhey_1_1Base.html  files.html  hey_8py.html  hierarchy.html
src/.test/tester/html/search/: all_1.js  classes_0.js  files_0.js  searchdata.js
src/.test/tester/latex/: annotated.tex  classhey_1_1App.eps  classhey_1_1App.tex  classhey_1_1Base.eps  classhey_1_1Base.tex  files.tex  hey_8py.tex  hierarchy.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
src/Utils/: Stack.cpp  tet.cpp
src/test/: anon  another.cpp  test.cpp
